--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,4 @@
----
+a--
 
 #
 # Copyright (c) 2014 Davide Guerri <davide.guerri@gmail.com>
@@ -43,6 +43,12 @@ nova_admin_tenant_id: false
 neutron_database_url: "sqlite:////var/lib/neutron/neutron.sqlite"
 
 # RabbitMQ
-rabbit_hostname: localhost
-rabbit_username: rabbit_username_default
-rabbit_pass: rabbit_pass_default
+neutron_rabbit_hostname: localhost
+neutron_rabbit_username: rabbit_username_default
+neutron_rabbit_pass: rabbit_pass_default
+neutron_rabbit_virtual_host: /
+neutron_rabbit_retry_interval: 1
+neutron_rabbit_port: 5672
+neutron_rabbit_hosts: "{{ neutron_rabbit_host }}:{{ neutron_rabbit_port }}"
+neutron_rabbit_ha_queues: False
+
