--- a/tasks/configuration.yml
+++ b/tasks/configuration.yml
@@ -46,6 +46,9 @@
       option:   connection
       value:    "{{ neutron_database_url }}"
     - section:  DEFAULT
+      option:   bind_host
+      value:    "{{ neutron_bind_host }}"
+    - section:  DEFAULT
       option:   bind_port
       value:    "{{ neutron_port }}"
     - section:  DEFAULT
