--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,6 +25,8 @@ neutron_bind_host: 0.0.0.0
 neutron_port: 9696
 neutron_protocol: http
 neutron_log_dir: /var/log/neutron
+neutron_log_debug: False
+neutron_log_verbose: False
 neutron_api_paste: /usr/share/neutron/api-paste.ini
 
 # Keystone
